force-app/main/default/objects/Account/fields/Agency_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Agency_Account_Manager__c</fullName>
    <label>Agency Account Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>