force-app/main/default/objects/Account/fields/Agency_BDM__c.field-meta.xml
<CustomField>
    <fullName>Agency_BDM__c</fullName>
    <label>Agency BDM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>