force-app/main/default/objects/Account/fields/Agency_RIM__c.field-meta.xml
<CustomField>
    <fullName>Agency_RIM__c</fullName>
    <label>Agency RIM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>