force-app/main/default/objects/Account/fields/Arabic_Address__c.field-meta.xml
<CustomField>
    <fullName>Arabic_Address__c</fullName>
    <label>Arabic Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>