force-app/main/default/objects/Account/fields/Arabic_City__c.field-meta.xml
<CustomField>
    <fullName>Arabic_City__c</fullName>
    <label>Arabic City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>