force-app/main/default/objects/Account/fields/Arabic_Country__c.field-meta.xml
<CustomField>
    <fullName>Arabic_Country__c</fullName>
    <label>Arabic Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>