force-app/main/default/objects/Account/fields/Arabic_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Arabic_First_Name__c</fullName>
    <label>Arabic First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>