force-app/main/default/objects/Account/fields/Arabic_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Arabic_Middle_Name__c</fullName>
    <label>Arabic Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>