force-app/main/default/objects/Account/fields/Arabic_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Arabic_Nationality__c</fullName>
    <label>Arabic Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>