force-app/main/default/objects/Account/fields/Arabic_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Arabic_Postal_Code__c</fullName>
    <label>Arabic Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>