force-app/main/default/objects/Account/fields/Bank_Details__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details__c</fullName>
    <label>Bank Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>