force-app/main/default/objects/Account/fields/Bank_Document_Available__c.field-meta.xml
<CustomField>
    <fullName>Bank_Document_Available__c</fullName>
    <label>Bank Document Available</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>