force-app/main/default/objects/Account/fields/Broker_Address__c.field-meta.xml
<CustomField>
    <fullName>Broker_Address__c</fullName>
    <label>Broker Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>