force-app/main/default/objects/Account/fields/Broker_Card_ID__c.field-meta.xml
<CustomField>
    <fullName>Broker_Card_ID__c</fullName>
    <label>Broker Card ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>