force-app/main/default/objects/Account/fields/Broker_Card_ID_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Broker_Card_ID_Expiry_Date__c</fullName>
    <label>Broker Card ID Expiry Date</label>
    <type>Date</type>
</CustomField>