force-app/main/default/objects/Account/fields/Buyer_Address__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Address__c</fullName>
    <label>Buyer Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>