force-app/main/default/objects/Account/fields/Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone__c</fullName>
    <label>Company Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>