force-app/main/default/objects/Account/fields/IBAN_Number__c.field-meta.xml
<CustomField>
    <fullName>IBAN_Number__c</fullName>
    <label>IBAN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>