force-app/main/default/objects/Account/fields/International_Type_Of_Broker__c.field-meta.xml
<CustomField>
    <fullName>International_Type_Of_Broker__c</fullName>
    <label>Type Of Broker</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UAE</fullName>
            </value>
            <value>
                <fullName>Non-UAE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>