force-app/main/default/objects/Account/fields/ORN_No__c.field-meta.xml
<CustomField>
    <fullName>ORN_No__c</fullName>
    <label>Company ORN/RERA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>