force-app/main/default/objects/Account/fields/Owner_EID_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Owner_EID_Expiry_Date__c</fullName>
    <label>Owner EID Expiry Date</label>
    <type>Date</type>
</CustomField>