force-app/main/default/objects/Account/fields/Owner_EID_No__c.field-meta.xml
<CustomField>
    <fullName>Owner_EID_No__c</fullName>
    <label>Owner EID No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>