force-app/main/default/objects/Account/fields/Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative__c</fullName>
    <label>Sales Representative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>