force-app/main/default/objects/Account/fields/TRN_No__c.field-meta.xml
<CustomField>
    <fullName>TRN_No__c</fullName>
    <label>TRN No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>