force-app/main/default/objects/Account/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IBAN Number</fullName>
            </value>
            <value>
                <fullName>SWIFT Code</fullName>
            </value>
            <value>
                <fullName>SORT Code</fullName>
            </value>
            <value>
                <fullName>IFSC Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>