force-app/main/default/objects/Account/fields/World_Check__c.field-meta.xml
<CustomField>
    <fullName>World_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>World Check</label>
    <type>Checkbox</type>
</CustomField>