force-app/main/default/objects/Account/recordTypes/Business_Agent.recordType-meta.xml
<RecordType>
    <fullName>Business_Agent</fullName>
    <active>false</active>
    <label>Business Agent</label>
</RecordType>