force-app/main/default/objects/Account/recordTypes/Company_Buyer.recordType-meta.xml
<RecordType>
    <fullName>Company_Buyer</fullName>
    <active>true</active>
    <label>Company Buyer</label>
</RecordType>