force-app/main/default/objects/Account/recordTypes/Corporate_Broker.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Broker</fullName>
    <active>true</active>
    <label>Corporate Broker</label>
</RecordType>