force-app/main/default/objects/Account/validationRules/Last_Name_should_not_be_numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Name_should_not_be_numeric</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $RecordType.Name = &quot;Individual Buyer&quot;,
    IsPersonAccount,
    OR(
        REGEX(FirstName, &quot;.*[0-9].*&quot;),
        REGEX(LastName, &quot;.*[0-9].*&quot;)
    )
)</errorConditionFormula>
    <errorMessage>Name should not contain numeric values for Buyer accounts</errorMessage>
</ValidationRule>