force-app/main/default/objects/Account/validationRules/Name_should_not_contain_numeric_values.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_should_not_contain_numeric_values</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $RecordType.Name = &quot;Company Buyer&quot;,
    REGEX(Name, &quot;.*[0-9].*&quot;)
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Name should not contain numeric values for Buyer accounts.</errorMessage>
</ValidationRule>