force-app/main/default/objects/Account/validationRules/Passport_Issue_date_cant_be_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Passport_Issue_date_cant_be_future</fullName>
    <active>true</active>
    <errorConditionFormula>Passport_Issue_Date__pc &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Passport_Issue_Date__pc</errorDisplayField>
    <errorMessage>Passport Issue Date cannot be future date</errorMessage>
</ValidationRule>