force-app/main/default/objects/Account/validationRules/Trade_Expiry_Date_can_be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Trade_Expiry_Date_can_be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Trade_License_Expiry_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Trade_License_Expiry_Date__c</errorDisplayField>
    <errorMessage>Trade License Expiry Date always be a Future Date</errorMessage>
</ValidationRule>