force-app/main/default/objects/Account/validationRules/Trade_Issue_date_cant_be_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Trade_Issue_date_cant_be_future</fullName>
    <active>true</active>
    <errorConditionFormula>Trade_License_Issue_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Trade_License_Issue_Date__c</errorDisplayField>
    <errorMessage>Trade License Issue Date Can&apos;t be a Future Date.</errorMessage>
</ValidationRule>